Updated tests and other code to use setServerURI.